# OpenSpace

./: CMakeLists.txt  README.md
src_server/: CLI.cpp  CLI.hpp  CMakeLists.txt  NetworkManager.cpp  NetworkManager.hpp  main.cpp
src_server/CLICommands/: Command.hpp  ExitCommand.hpp  HelpCommand.hpp
